idf_component_register( 
        SRCS 
            "main.c" 
            "libsrc/mcc_enc_dec.c" 
            "libsrc/mcc_code_maps.c"
            "libsrc/mcc_receive.c"
            "libsrc/mcc_receive_ll.c"
            "libsrc/mcc_transmit.c"
        INCLUDE_DIRS 
            "include"
        PRIV_INCLUDE_DIRS
            "private_include"
)